--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,12 @@
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+ibans = ["*.txt", "*.rst"]
+
 
 [project]
 name = "ibans"
@@ -37,6 +43,7 @@ classifiers = [
 [tool.pdm]
 package-type = "library"
 package-dir = "src"
+
 [tool.pdm.dev-dependencies]
 dev = [
     "flake8",
